# ajedrez-iot

./: AGENTS.md  README.md  build.py  deploy.py  main.py  opencode.json  pyproject.toml
.github/: copilot-instructions.md
docs/logs/: 2026-02-07-1.md  2026-02-07.md
docs/readmes/: 01-async-basics.md  02-interrupts-flags-and-schedule.md  03-event-queue-architecture.md  README.md
examples/: main_microdot.py  main_mqtt.py  main_nanoweb.py  main_tinyweb.py
lib/: logging.py  microdot.py  microdot_websocket.py
lib/umqtt/: __init__.py  robust.py  simple.py
modules/: ACCESSPOINT_REQUIREMENTS.md  CHESSCLOCK_REQUIREMENTS.md  CHESSDISPLAY_REQUIREMENTS.md  CHESSGAME_REQUIREMENTS.md  CHESS_REQUIREMENTS.md  MQTTCLIENT_REQUIREMENTS.md  WIFI_REQUIREMENTS.md
modules/chess/: Chess.py  DOCUMENTACION.docx  README.md  __init__.py  pytest.ini  run_all_tests.py  test_basic_moves.py  test_check_checkmate.py  test_fen_pgn_history.py  test_special_moves.py  test_stalemate_draw.py
modules/chess/tests/: __init__.py  conftest.py  test_basic_moves.py  test_check_checkmate.py  (+4 more)
modules/chessclock/: ChessClock.py  README.md  __init__.py
modules/chessdisplay/: ChessDisplay.py  README.md  __init__.py
modules/chessgame/: ChessGame.py  README.md  __init__.py
modules/mqttClient/: MqttClient.py  README.md  __init__.py  payload.py
modules/network/: AccessPoint.py  README.md  WiFi.py  __init__.py
modules/sse/: README.md  SSE.py  __init__.py
tests/: conftest.py
tools/: http_bench.py
web/: admin.html  index.html  login.html  style.css
web/js/: admin.js  board.js  clock.js  login.js
(+13 files in other folders)
