[project]
name = "zulma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "micropython-esp32-stubs>=1.27.0.post1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
